gestion de contrat + authentification